# pintos

./: CMakeLists.txt  Dockerfile  Jenkinsfile  page_fault.txt
doc/: alarmclock.tex  codebase.texi  devices.tmpl  intro.texi  localsettings.texi  pintos-ic.texi  reference.texi  standards.texi  task0_questions.texi  texi2html  threads.tmpl  userprog.tmpl  vm.texi  vm.tmpl
src/: Makefile.build
src/devices/: timer.c
src/examples/: bubsort.c  cat.c  cmp.c  cp.c  echo.c  halt.c  hex-dump.c  insult.c  lineup.c  matmult.c  mcat.c  mcp.c  recursor.c  rm.c
src/filesys/: directory.c  file.c  file.h  filesys.c  free-map.c  free-map.h  fsutil.c  fsutil.h  inode.c
src/lib/: arithmetic.c  ctype.h  debug.c  debug.h  random.c  random.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  syscall-nr.h  ustar.c  ustar.h
src/lib/kernel/: bitmap.c  bitmap.h  console.c  console.h  debug.c  hash.c  hash.h  list.c  list.h
src/lib/user/: console.c  debug.c  entry.c  stdio.h  (+2 more)
src/tests/: lib.c
src/threads/: fixed_point.h  init.c  interrupt.c  interrupt.h  intr-stubs.S  intr-stubs.h  io.h  malloc.c  palloc.c  palloc.h  pte.h  ready-lists.c  ready-lists.h  synch.c  synch.h  thread.c  thread.h  vaddr.h
src/userprog/: 0_init_and_make.ruby  avltree.c  avltree.h  exception.c  exception.h  gdt.c  pagedir.c  process.c  process.h  syscall.c  syscall.h  tss.c  tss.h
src/utils/: Pintos.pm  backtrace  pintos  pintos-gdb  pintos-mkdisk  pintos-set-cmdline  setitimer-helper.c  squish-pty.c  squish-unix.c
src/vm/: frame.c  frame.h  mmap.c  mmap.h  page.c  page.h  swap.c  swap.h
(+7 files in other folders)
